[gd_scene load_steps=9 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://space.png" type="Texture" id=2]
[ext_resource path="res://Disk.tscn" type="PackedScene" id=3]
[ext_resource path="res://Unique.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://song.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1023.3, 631.002 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 150
font_data = ExtResource( 4 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundClickLose" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 522.604, 319.767 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackgroundClickLose"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 508.707, 290.69 )
texture = ExtResource( 2 )

[node name="Disk" parent="." instance=ExtResource( 3 )]

[node name="ClicksLabel" type="Label" parent="."]
margin_left = 16.3285
margin_top = 16.3284
margin_right = 61.3285
margin_bottom = 35.3284
custom_fonts/font = SubResource( 2 )
text = "Clicks:"

[node name="LoseLabel" type="Label" parent="."]
margin_left = 85.4598
margin_top = 184.749
margin_right = 931.46
margin_bottom = 413.749
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.835294, 0.254902, 0.254902, 1 )
text = "YOU LOSE!"
align = 1
valign = 1

[node name="Song" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
[connection signal="input_event" from="BackgroundClickLose" to="." method="_on_Area2D2_input_event"]
